<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/libraryFragment"
         android:title="@string/library"
         android:icon="@drawable/ic_library" />
     <item
         android:id="@+id/wishlistFragment"
         android:title="@string/wishlist"
         android:icon="@drawable/ic_wishlist" />
     <item
         android:id="@+id/searchFragment"
         android:title="@string/search"
         android:icon="@drawable/ic_search" />
     <item
         android:id="@+id/feedFragment"
         android:title="@string/feed"
         android:icon="@drawable/ic_feed" />
...
