...
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnAddLibrarySearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_to_library"
                android:src="@drawable/ic_add"
                app:tint="@color/green" />

            <ImageButton
                android:id="@+id/btnAddWishlistSearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_to_wishlist"
                android:src="@drawable/ic_wishlist"
...
