<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llDialogResetPassword"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvInstructionDialogResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_password_instruction"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOtpCodeDialogResetPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_code_hint"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtpCodeDialogResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilResetNewPasswordDialogResetPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResetNewPasswordDialogResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilResetConfirmPasswordDialogResetPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResetConfirmPasswordDialogResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>