<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llDialogForgotPassword"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvInstructionDialogForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password_instruction"
        android:textSize="16sp"
        android:textColor="@color/green"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilForgotEmailDialogForgotPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxStrokeColor="@color/til_stroke"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/green"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/green"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etForgotEmailDialogForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>