package com.nagy_mark.mygamevault.ui;

import android.Manifest;
import android.content.Context;
import android.util.Log;
import android.view.View;

import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.assertion.ViewAssertions;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.rule.GrantPermissionRule;

import com.nagy_mark.mygamevault.MainActivity;
import com.nagy_mark.mygamevault.R;
import com.nagy_mark.mygamevault.models.SavedGameModel;
import com.nagy_mark.mygamevault.network.SupabaseApi;
import com.nagy_mark.mygamevault.network.SupabaseApiClient;
import com.nagy_mark.mygamevault.utils.SessionManager;

import org.hamcrest.Matcher;
import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.IOException;
import java.util.List;

import retrofit2.Response;

@RunWith(AndroidJUnit4.class)
public class SearchUITests {
    @Rule
    public ActivityScenarioRule<MainActivity> activityRule = new ActivityScenarioRule<>(MainActivity.class);

    @Rule
    public GrantPermissionRule permissionRule = GrantPermissionRule.grant(Manifest.permission.POST_NOTIFICATIONS);

    public static ViewAction clickChildViewWithId(final int id) {
        return new ViewAction() {
            @Override
            public Matcher<View> getConstraints() {
                return null;
            }

            @Override
            public String getDescription() {
                return "Kattintás a kártyán belüli " + id + " azonosítójú gombra";
            }

            @Override
            public void perform(UiController uiController, View view) {
                View v = view.findViewById(id);
                if (v != null) {
                    v.performClick();
                }
            }
        };
    }

    @Before
    public void setUp() {
        try {
            Espresso.onView(ViewMatchers.withId(R.id.etLoginEmail))
                    .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));

            Espresso.onView(ViewMatchers.withId(R.id.etLoginEmail))
                    .perform(ViewActions.typeText("teszt2@teszt.hu"), ViewActions.closeSoftKeyboard());

            Espresso.onView(ViewMatchers.withId(R.id.etLoginPassword))
                    .perform(ViewActions.typeText("teszt2"), ViewActions.closeSoftKeyboard());

            Espresso.onView(ViewMatchers.withId(R.id.btnLogin))
                    .perform(ViewActions.click());

            Thread.sleep(3000);
        } catch (Exception e) {}

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.searchFragment))
                .perform(ViewActions.click());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {}
    }

    @After
    public void tearDown() {
        Context context = ApplicationProvider.getApplicationContext();
        SupabaseApi api = SupabaseApiClient.getClient(context).create(SupabaseApi.class);
        SessionManager sessionManager = new SessionManager(context);

        String userId = sessionManager.getUserId();

        if (userId != null) {
            try {
                Response<List<SavedGameModel>> getResponse = api.getUserSavedGames("eq." + userId, "*,game_data(*)").execute();

                if (getResponse.isSuccessful() && getResponse.body() != null) {
                    for (SavedGameModel game : getResponse.body()) {
                        if ("Red Dead Redemption 2".equals(game.getGameName())) {
                            Response<Void> deleteResponse = api.deleteGame("eq." + game.getId()).execute();

                            if (!deleteResponse.isSuccessful()) {
                                Log.e("TEARDOWN_ERROR", "Nem sikerült törölni a játékot. Kód: " + deleteResponse.code());
                            } else {
                                Log.d("TEARDOWN_SUCCESS", "A Red Dead Redemption 2 sikeresen törölve a teszt után!");
                            }
                            break;
                        }
                    }
                } else {
                    Log.e("TEARDOWN_ERROR", "Nem sikerült lekérdezni a játékokat a törléshez. Kód: " + getResponse.code());
                }
            } catch (IOException e) {
                Log.e("TEARDOWN_EXCEPTION", "Hálózati hiba a törlés során: " + e.getMessage());
            }
        }

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {}
    }

    @Test
    public void testTopGamesAreLoaded() {
        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .check(ViewAssertions.matches(ViewMatchers.isDisplayed()));

        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .perform(RecyclerViewActions.scrollToPosition(0))
                .check(ViewAssertions.matches(ViewMatchers.hasDescendant(ViewMatchers.withText("The Witcher 3: Wild Hunt - Game of the Year Edition"))));
    }

    @Test
    public void testSearchAndSearchClear() {
        Espresso.onView(ViewMatchers.withId(R.id.etSearch))
                .perform(ViewActions.typeText("Red Dead Redemption 2"), ViewActions.pressImeActionButton());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .perform(RecyclerViewActions.scrollToPosition(0))
                .check(ViewAssertions.matches(ViewMatchers.hasDescendant(ViewMatchers.withText("Red Dead Redemption 2"))));

        Espresso.onView(ViewMatchers.withId(R.id.etSearch))
                .perform(ViewActions.clearText());

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .perform(RecyclerViewActions.scrollToPosition(0))
                .check(ViewAssertions.matches(ViewMatchers.hasDescendant(ViewMatchers.withText("The Witcher 3: Wild Hunt - Game of the Year Edition"))));
    }

    @Test
    public void testAddGameToLibrary() {
        Espresso.onView(ViewMatchers.withId(R.id.etSearch))
                .perform(ViewActions.typeText("Red Dead Redemption 2"), ViewActions.pressImeActionButton());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .perform(RecyclerViewActions.actionOnItemAtPosition(
                        0,
                        clickChildViewWithId(R.id.btnAddLibrarySearch)
                ));

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.libraryFragment))
                .perform(ViewActions.click());

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvLibrary))
                .perform(RecyclerViewActions.scrollTo(
                        ViewMatchers.hasDescendant(ViewMatchers.withText("Red Dead Redemption 2"))
                ))
                .check(ViewAssertions.matches(
                        ViewMatchers.hasDescendant(ViewMatchers.withText("Red Dead Redemption 2"))
                ));
    }

    @Test
    public void testAddGameToWishlist() {
        Espresso.onView(ViewMatchers.withId(R.id.etSearch))
                .perform(ViewActions.typeText("Red Dead Redemption 2"), ViewActions.pressImeActionButton());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvSearch))
                .perform(RecyclerViewActions.actionOnItemAtPosition(
                        0,
                        clickChildViewWithId(R.id.btnAddWishlistSearch)
                ));

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.wishlistFragment))
                .perform(ViewActions.click());

        try {
            Thread.sleep(2000);
        } catch (InterruptedException e) {}

        Espresso.onView(ViewMatchers.withId(R.id.rvWishlist))
                .perform(RecyclerViewActions.scrollTo(
                        ViewMatchers.hasDescendant(ViewMatchers.withText("Red Dead Redemption 2"))
                ))
                .check(ViewAssertions.matches(
                        ViewMatchers.hasDescendant(ViewMatchers.withText("Red Dead Redemption 2"))
                ));
    }
}
